6858886: G1: guarantee(_next_marked_bytes <= used(),"invariant") at heapRegion.hpp:359

Reviewed-by: tonyp, ysr